tests/baselines/reference.bak/jsdocPostfixEqualsAddsOptionality.errors.txt
tests/cases/conformance/jsdoc/a.js(4,5): error TS2322: Type 'null' is not assignable to type 'number'.
tests/cases/conformance/jsdoc/a.js(8,3): error TS2345: Argument of type 'null' is not assignable to parameter of type 'number'.


==== tests/cases/conformance/jsdoc/a.js (2 errors) ====
    /** @param {number=} a */
    function f(a) {
        a = 1
        a = null // should not be allowed
        ~
!!! error TS2322: Type 'null' is not assignable to type 'number'.
        a = undefined
    }
    f()
    f(null) // should not be allowed
      ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'number'.
    f(undefined)
    f(1)
    
    /** @param {???!?number?=} a */
    function g(a) {
        a = 1
        a = null
        a = undefined
    }
    g()
    g(null)
    g(undefined)
    g(1)
    